--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
-        <activity android:name=".Profile"></activity>
+        <activity android:name=".Food"></activity>
+        <activity android:name=".Profile" />
         <activity android:name=".Share" />
         <activity android:name=".SecendActivity" />
         <activity android:name=".RateUs" />
